--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- SITE ICON -->
+        <!-- PAGE ICON -->
         <link rel="shortcut icon" href="./assets/img/pageIcon.png">
 
         <!-- UNICONS -->
