--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
     <head>
         <meta charset="UTF-8">
@@ -137,23 +137,6 @@
                             Nesse portfólio estão presentes algumas de minhas experiências educacionais e profissionais. <br>
                             &emsp;Sinta-se a vontade para explorar ou entrar em contato em caso de dúvidas ou interesses.
                         </p>
-
-                        <!-- <div class="about__info">
-                            <div>
-                                <span class="about__info-title">01+</span>
-                                <span class="about__info-name">Anos <br> experiência</span>
-                            </div>
-
-                            <div>
-                                <span class="about__info-title">02+</span>
-                                <span class="about__info-name">Anos <br> experiência</span>
-                            </div>
-
-                            <div>
-                                <span class="about__info-title">03+</span>
-                                <span class="about__info-name">Anos <br> experiência</span>
-                            </div>
-                        </div> -->
 
                         <div class="about__buttons">
                             <a download="" href="/assets/pdf/CurrículoEdsonFrancisco.pdf" class="button button--flex">
@@ -678,9 +661,6 @@
                     <div class="swiper-pagination"></div>
                 </div>
             </section>
-
-            <!-- PROJECT IN MIND -->
-
 
             <!-- CONTACT ME -->
             <section class="contact section" id="contacts">
