--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         </p>
 
                         <div class="about__buttons">
-                            <a download="" href="/assets/pdf/CurrículoEdsonFrancisco.pdf" class="button button--flex">
+                            <a download="" href="assets/pdf/CurrículoEdsonFrancisco.pdf" class="button button--flex">
                                 <i class="uil uil-file-download about__icon"></i> Baixar Currículo
                             </a>
                         </div>
