--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- PAGE ICON -->
-    <link rel="shortcut icon" href="./assets/img/pageIcon.png">
+    <link rel="shortcut icon" href="./assets/img/page/icon.png">
 
     <!-- UNICONS -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -95,7 +95,7 @@
                     </div>
 
                     <div class="home__img">
-                        <img class="home__image" src="./assets/img/profile.jpg" alt="profile">
+                        <img class="home__image" src="./assets/img/page/profile.jpg" alt="profile">
                     </div>
 
                     <div class="home__data">
@@ -128,7 +128,7 @@
             <span class="section__subtitle">Me Conheça um Pouco</span>
 
             <div class="about__container container grid">
-                <img src="assets/img/aboutIllustration.jpg" alt="about image" class="about__img">
+                <img src="assets/img/page/aboutIllustration.jpg" alt="about image" class="about__img">
 
                 <div class="about__data">
                     <p class="about__description" style="text-align: justify;">
@@ -564,7 +564,7 @@
                 <div class="swiper-wrapper">
                     <!-- PROJECT 1 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/Ecoleta.jpg" alt="Ecoleta" class="portfolio__img">
+                        <img src="assets/img/projects/Ecoleta.jpg" alt="Ecoleta" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <a href="https://github.com/Edssaac/Ecoleta" target="_blank">
@@ -586,7 +586,7 @@
 
                     <!-- PROJECT 2 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/Proffy.jpg" alt="Proffy" class="portfolio__img">
+                        <img src="assets/img/projects/Proffy.jpg" alt="Proffy" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <a href="https://github.com/Edssaac/Proffy" target="_blank">
@@ -607,18 +607,16 @@
 
                     <!-- PROJECT 3 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/SnakeGame.jpg" alt="SnakeGame" class="portfolio__img">
+                        <img src="assets/img/projects/EdsFlix.png" alt="EdsFlix" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <a href="https://github.com/Edssaac/SnakeGame" target="_blank">
-                                <h3 class="portfolio__title">SnakeGame</h3>
+                            <a href="https://github.com/Edssaac/edsflix" target="_blank">
+                                <h3 class="portfolio__title">EdsFlix</h3>
                             </a>
                             <p class="portfolio__description">
-                                Recriando o clássico jogo da cobrinha usando apenas HTML, CSS e JavaScript.
-                                Feito com o objetivo de treinar o Desenvolvido Web e praticar a lógica de programação na
-                                linguagem usada.
+                                -------
                             </p>
-                            <a href="https://edssaac.github.io/SnakeGame/"
+                            <a href="https://edsflix.vercel.app/"
                                 class="button button--flex button--small portfolio__button" target="_blank">
                                 Conhecer
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -628,17 +626,16 @@
 
                     <!-- PROJECT 4 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/Tictactoe.jpg" alt="TicTacToe" class="portfolio__img">
+                        <img src="assets/img/projects/Instagram.png" alt="Instagram" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <a href="https://github.com/Edssaac/tictactoe" target="_blank">
-                                <h3 class="portfolio__title">Jogo da Velha</h3>
+                            <a href="https://github.com/Edssaac/instagram" target="_blank">
+                                <h3 class="portfolio__title">Clone Instagram</h3>
                             </a>
                             <p class="portfolio__description">
-                                Mais um joguinho para a prática de Desenvolvimento na Web, dessa vez recriando o
-                                clássico e muito bem conhecido jogo da velha.
+                                -------
                             </p>
-                            <a href="https://edssaac.github.io/tictactoe/"
+                            <a href="https://edssaac.github.io/instagram/"
                                 class="button button--flex button--small portfolio__button" target="_blank">
                                 Conhecer
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -648,19 +645,16 @@
 
                     <!-- PROJECT 5 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/Abigail.jpg" alt="Abigail" class="portfolio__img">
+                        <img src="assets/img/projects/ShrekFlix.png" alt="ShrekFlix" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <a href="https://github.com/Edssaac/As-Aventuras-de-Abigail" target="_blank">
-                                <h3 class="portfolio__title">As Aventuras de Abigail</h3>
+                            <a href="https://github.com/Edssaac/ShrekFlix" target="_blank">
+                                <h3 class="portfolio__title">ShrekFlix</h3>
                             </a>
                             <p class="portfolio__description">
-                                Projeto de um jogo Endless Runner (corrida infinita) baseado no dino da google e com
-                                elementos
-                                inspirados em outros jogos. Para programar foi usado apenas JavaScript e sua Orientação
-                                a Objetos
+                                -------
                             </p>
-                            <a href="https://edssaac.github.io/As-Aventuras-de-Abigail/"
+                            <a href="https://edssaac.github.io/ShrekFlix/"
                                 class="button button--flex button--small portfolio__button" target="_blank">
                                 Conhecer
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -670,7 +664,64 @@
 
                     <!-- PROJECT 6 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/Hilderlandia.jpg" alt="Hilderlandia" class="portfolio__img">
+                        <img src="assets/img/projects/LOL.png" alt="league of legends" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <a href="https://github.com/Edssaac/league-of-legends" target="_blank">
+                                <h3 class="portfolio__title">League of Legends</h3>
+                            </a>
+                            <p class="portfolio__description">
+                                -------
+                            </p>
+                            <a href="https://edssaac.github.io/league-of-legends/"
+                                class="button button--flex button--small portfolio__button" target="_blank">
+                                Conhecer
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- PROJECT 7 -->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/projects/javascriptgames.png" alt="javascriptgames" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <a href="https://github.com/Edssaac/Javascriptgames" target="_blank">
+                                <h3 class="portfolio__title">javascriptgames</h3>
+                            </a>
+                            <p class="portfolio__description">
+                                -------
+                            </p>
+                            <a href="https://edssaac.github.io/javascriptgames/"
+                                class="button button--flex button--small portfolio__button" target="_blank">
+                                Conhecer
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- PROJECT 8 -->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/projects/Pokedex.png" alt="pokedex" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <a href="https://github.com/Edssaac/pokedex" target="_blank">
+                                <h3 class="portfolio__title">Pokédex</h3>
+                            </a>
+                            <p class="portfolio__description">
+                                -------
+                            </p>
+                            <a href="https://edssaac.github.io/pokedex/"
+                                class="button button--flex button--small portfolio__button" target="_blank">
+                                Conhecer
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- PROJECT 9 -->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/projects/Hilderlandia.jpg" alt="Hilderlandia" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <a href="https://github.com/Edssaac/Hilderlandia" target="_blank">
@@ -683,6 +734,101 @@
                             </p>
                             <a href="https://edssaac.itch.io/hilderlandia"
                                 class="button button--flex button--small portfolio__button" target="_blank">
+                                Conhecer
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- PROJECT 10 -->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/projects/php-class-formatter.png" alt="PHP Class Formatter" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <a href="https://github.com/Edssaac/PHP-Class-Formatter" target="_blank">
+                                <h3 class="portfolio__title">PHP Class Formatter</h3>
+                            </a>
+                            <p class="portfolio__description">
+                                -------------------
+                            </p>
+                            <a href="https://edssaac.github.io/PHP-Class-Formatter/"
+                                class="button button--flex button--small portfolio__button" target="_blank">
+                                Conhecer
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- PROJECT 11 -->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/projects/EscolaFoo.png" alt="Gestor Escolar" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <a href="https://github.com/Edssaac/escola-foo" target="_blank">
+                                <h3 class="portfolio__title">Gestor Escolar</h3>
+                            </a>
+                            <p class="portfolio__description">
+                                -------------------
+                            </p>
+                            <a href="https://escola-foo.herokuapp.com/" class="button button--flex button--small portfolio__button"
+                                target="_blank">
+                                Conhecer
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- PROJECT 12 -->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/projects/Classfatec.png" alt="Gerenciador de Vagas" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <a href="https://github.com/Edssaac/PHP-CRUD" target="_blank">
+                                <h3 class="portfolio__title">Gerenciador de Vagas</h3>
+                            </a>
+                            <p class="portfolio__description">
+                                -------------------
+                            </p>
+                            <a href="https://classfatec.herokuapp.com/" class="button button--flex button--small portfolio__button"
+                                target="_blank">
+                                Conhecer
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- PROJECT 13 -->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/projects/CEP.png" alt="Consulta de CEP" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <a href="https://github.com/Edssaac/viaCepConsultas" target="_blank">
+                                <h3 class="portfolio__title">Consulta de CEP</h3>
+                            </a>
+                            <p class="portfolio__description">
+                                -------------------
+                            </p>
+                            <a href="https://viacepconsulta.herokuapp.com/" class="button button--flex button--small portfolio__button"
+                                target="_blank">
+                                Conhecer
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- PROJECT 14 -->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/projects/codeio.png" alt="code.io" class="portfolio__img">
+
+                        <div class="portfolio__data">
+                            <a href="https://github.com/Edssaac/code.io" target="_blank">
+                                <h3 class="portfolio__title">CODE.IO</h3>
+                            </a>
+                            <p class="portfolio__description">
+                                -------------------
+                            </p>
+                            <a href="https://edssaac.github.io/code.io/" class="button button--flex button--small portfolio__button"
+                                target="_blank">
                                 Conhecer
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
