descrição de projetos

--- a/index.html
+++ b/index.html
@@ -614,7 +614,9 @@
                                 <h3 class="portfolio__title">EdsFlix</h3>
                             </a>
                             <p class="portfolio__description">
-                                -------
+                                Protótipo de um clone da plataforma de streaming Netflix. Neste projeto é possível
+                                navegar entre os vídeos cadastrados, ou se desejado, cadastrar novos vídeos para que
+                                possam ser compartilhados.
                             </p>
                             <a href="https://edsflix.vercel.app/"
                                 class="button button--flex button--small portfolio__button" target="_blank">
@@ -633,7 +635,10 @@
                                 <h3 class="portfolio__title">Clone Instagram</h3>
                             </a>
                             <p class="portfolio__description">
-                                -------
+                                Instagram é uma das maiores e mais acessadas redes sociais, seu principal objetivo é o
+                                compartilhamento de imagens entre os seus usuários, possui um sistema ágil e com um
+                                design muito interativo. Este projeto foi desenvolvido para recriar a interface de login
+                                da plataforma.
                             </p>
                             <a href="https://edssaac.github.io/instagram/"
                                 class="button button--flex button--small portfolio__button" target="_blank">
@@ -652,7 +657,9 @@
                                 <h3 class="portfolio__title">ShrekFlix</h3>
                             </a>
                             <p class="portfolio__description">
-                                -------
+                                Este projeto trás uma solução para todos os amantes de Shrek, nessa plataforma são
+                                reunidos todos os filmes do ogro verde e é disponibilizado algumas informações sobre
+                                eles.
                             </p>
                             <a href="https://edssaac.github.io/ShrekFlix/"
                                 class="button button--flex button--small portfolio__button" target="_blank">
@@ -671,7 +678,9 @@
                                 <h3 class="portfolio__title">League of Legends</h3>
                             </a>
                             <p class="portfolio__description">
-                                -------
+                                League of Legends é um dos jogos mais jogados em todo o mundo, dentre todos os seus
+                                pontos positivos, o seu desing é um dos mais reconhecidos. Neste projeto foi recriada a
+                                tela inicial, a tela de login do usuário.
                             </p>
                             <a href="https://edssaac.github.io/league-of-legends/"
                                 class="button button--flex button--small portfolio__button" target="_blank">
@@ -683,14 +692,15 @@
 
                     <!-- PROJECT 7 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/projects/javascriptgames.png" alt="javascriptgames" class="portfolio__img">
+                        <img src="assets/img/projects/Javascriptgames.png" alt="javascriptgames" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <a href="https://github.com/Edssaac/Javascriptgames" target="_blank">
-                                <h3 class="portfolio__title">javascriptgames</h3>
+                                <h3 class="portfolio__title">Coletânea de Jogos</h3>
                             </a>
                             <p class="portfolio__description">
-                                -------
+                                Este projeto reuni alguns dos jogos que desenvolvi, são inspirados nos famosos jogos
+                                clássicos.
                             </p>
                             <a href="https://edssaac.github.io/javascriptgames/"
                                 class="button button--flex button--small portfolio__button" target="_blank">
@@ -709,7 +719,10 @@
                                 <h3 class="portfolio__title">Pokédex</h3>
                             </a>
                             <p class="portfolio__description">
-                                -------
+                                Pokédex é uma enciclopédia virtual portátil de alta tecnologia que os treinadores
+                                Pokémon transportam para registra todas as espécies diferentes de Pokémon que são
+                                encontradas durante a viagem. Este projeto disponibiliza uma Pokédex para que todos os
+                                Pokémon possam ser conhecidos.
                             </p>
                             <a href="https://edssaac.github.io/pokedex/"
                                 class="button button--flex button--small portfolio__button" target="_blank">
@@ -729,8 +742,7 @@
                             </a>
                             <p class="portfolio__description">
                                 Jogo Mobile fortemente inspirado em Super Mario e em outros jogos clássicos de
-                                plataforma 2D,
-                                programado usando apenas C# no ambiente de desenvolvimento Unity.
+                                plataforma 2D, programado usando apenas C# no ambiente de desenvolvimento Unity.
                             </p>
                             <a href="https://edssaac.itch.io/hilderlandia"
                                 class="button button--flex button--small portfolio__button" target="_blank">
@@ -742,7 +754,8 @@
 
                     <!-- PROJECT 10 -->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/projects/php-class-formatter.png" alt="PHP Class Formatter" class="portfolio__img">
+                        <img src="assets/img/projects/php-class-formatter.png" alt="PHP Class Formatter"
+                            class="portfolio__img">
 
                         <div class="portfolio__data">
                             <a href="https://github.com/Edssaac/PHP-Class-Formatter" target="_blank">
@@ -770,8 +783,8 @@
                             <p class="portfolio__description">
                                 -------------------
                             </p>
-                            <a href="https://escola-foo.herokuapp.com/" class="button button--flex button--small portfolio__button"
-                                target="_blank">
+                            <a href="https://escola-foo.herokuapp.com/"
+                                class="button button--flex button--small portfolio__button" target="_blank">
                                 Conhecer
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
@@ -789,8 +802,8 @@
                             <p class="portfolio__description">
                                 -------------------
                             </p>
-                            <a href="https://classfatec.herokuapp.com/" class="button button--flex button--small portfolio__button"
-                                target="_blank">
+                            <a href="https://classfatec.herokuapp.com/"
+                                class="button button--flex button--small portfolio__button" target="_blank">
                                 Conhecer
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
@@ -808,8 +821,8 @@
                             <p class="portfolio__description">
                                 -------------------
                             </p>
-                            <a href="https://viacepconsulta.herokuapp.com/" class="button button--flex button--small portfolio__button"
-                                target="_blank">
+                            <a href="https://viacepconsulta.herokuapp.com/"
+                                class="button button--flex button--small portfolio__button" target="_blank">
                                 Conhecer
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
@@ -827,8 +840,8 @@
                             <p class="portfolio__description">
                                 -------------------
                             </p>
-                            <a href="https://edssaac.github.io/code.io/" class="button button--flex button--small portfolio__button"
-                                target="_blank">
+                            <a href="https://edssaac.github.io/code.io/"
+                                class="button button--flex button--small portfolio__button" target="_blank">
                                 Conhecer
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
