--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <p class="about__description" style="text-align: justify;">
                         &emsp;Meu nome é Edson Isaac e tenho <span id="idade"></span> anos. Atualmente trabalho como
                         Desenvolvedor Web
-                        no Grupo Well e sou estudante de Análise e Desenvolvimento de Sistemas na Fatec de Sorocaba.
+                        na Venda e Cia e sou estudante de Análise e Desenvolvimento de Sistemas na Fatec de Sorocaba.
                         Nesse portfólio estão presentes algumas de minhas experiências educacionais e profissionais.
                         <br>
                         &emsp;Sinta-se a vontade para explorar ou entrar em contato em caso de dúvidas ou interesses.
