--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                             <div></div>
                             <div>
                                 <span class="qualification__rounder"></span>
-                                <!-- <span class="qualification__line"></span> -->
+                                <span class="qualification__line"></span>
                             </div>
 
                             <div>
@@ -360,8 +360,24 @@
                                 <span class="qualification__subtitle">Fatec - Sorocaba</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2020 - Atualmente
+                                    2020 - 2023
                                 </div>
+                            </div>
+                        </div>
+
+                        <!-- QUALIFICATION 3 -->
+                        <div class="qualification__data">
+                            <div>
+                                <h3 class="qualification__title">Desenvolvimento de Sistemas</h3>
+                                <span class="qualification__subtitle">Etec - Sorocaba</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2023 - 2024
+                                </div>
+                            </div>
+
+                            <div>
+                                <span class="qualification__rounder"></span>
                             </div>
                         </div>
                     </div>
@@ -562,50 +578,6 @@
 
             <div class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper">
-                    <!-- PROJECT 1 -->
-                    <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/projects/Ecoleta.jpg" alt="Ecoleta" class="portfolio__img">
-
-                        <div class="portfolio__data">
-                            <a href="https://github.com/Edssaac/Ecoleta" target="_blank">
-                                <h3 class="portfolio__title">Ecoleta</h3>
-                            </a>
-                            <p class="portfolio__description">
-                                Em comemoração ao Dia do Ambiente (5 de Junho), este projeto foi desenvolvido
-                                tendo como objetivo ser o protótipo de uma plataforma que conecta as empresas
-                                e entidades de coleta de resíduos orgânicos e inorgânicos até as pessoas que
-                                precisam descartar seus resíduos de maneira ecológica.
-                            </p>
-                            <a href="https://edssaac.github.io/Ecoleta/"
-                                class="button button--flex button--small portfolio__button" target="_blank">
-                                Conhecer
-                                <i class="uil uil-arrow-right button__icon"></i>
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- PROJECT 2 -->
-                    <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/projects/Proffy.jpg" alt="Proffy" class="portfolio__img">
-
-                        <div class="portfolio__data">
-                            <a href="https://github.com/Edssaac/Proffy" target="_blank">
-                                <h3 class="portfolio__title">Proffy</h3>
-                            </a>
-                            <p class="portfolio__description">
-                                Protótipo de uma plataforma em que professores podem se cadastrar para ministrarem
-                                aulas, definindo o preço, hora e dia de trabalho para que alunos interessados possam
-                                entrar em contato e se inscreverem.
-                            </p>
-                            <a href="https://edssaac.github.io/Proffy/"
-                                class="button button--flex button--small portfolio__button" target="_blank">
-                                Conhecer
-                                <i class="uil uil-arrow-right button__icon"></i>
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- PROJECT 3 -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/projects/EdsFlix.png" alt="EdsFlix" class="portfolio__img">
 
@@ -626,7 +598,6 @@
                         </div>
                     </div>
 
-                    <!-- PROJECT 4 -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/projects/Instagram.png" alt="Instagram" class="portfolio__img">
 
@@ -648,7 +619,6 @@
                         </div>
                     </div>
 
-                    <!-- PROJECT 5 -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/projects/ShrekFlix.png" alt="ShrekFlix" class="portfolio__img">
 
@@ -669,7 +639,6 @@
                         </div>
                     </div>
 
-                    <!-- PROJECT 6 -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/projects/LOL.png" alt="league of legends" class="portfolio__img">
 
@@ -690,7 +659,6 @@
                         </div>
                     </div>
 
-                    <!-- PROJECT 7 -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/projects/Javascriptgames.png" alt="javascriptgames" class="portfolio__img">
 
@@ -710,7 +678,6 @@
                         </div>
                     </div>
 
-                    <!-- PROJECT 8 -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/projects/Pokedex.png" alt="pokedex" class="portfolio__img">
 
@@ -732,7 +699,6 @@
                         </div>
                     </div>
 
-                    <!-- PROJECT 9 -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/projects/Hilderlandia.jpg" alt="Hilderlandia" class="portfolio__img">
 
@@ -752,7 +718,6 @@
                         </div>
                     </div>
 
-                    <!-- PROJECT 10 -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/projects/php-class-formatter.png" alt="PHP Class Formatter"
                             class="portfolio__img">
@@ -772,7 +737,6 @@
                         </div>
                     </div>
 
-                    <!-- PROJECT 11 -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/projects/EscolaFoo.png" alt="Gestor Escolar" class="portfolio__img">
 
@@ -791,7 +755,6 @@
                         </div>
                     </div>
 
-                    <!-- PROJECT 12 -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/projects/Classfatec.png" alt="Gerenciador de Vagas" class="portfolio__img">
 
@@ -810,7 +773,6 @@
                         </div>
                     </div>
 
-                    <!-- PROJECT 13 -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/projects/CEP.png" alt="Consulta de CEP" class="portfolio__img">
 
@@ -829,7 +791,6 @@
                         </div>
                     </div>
 
-                    <!-- PROJECT 14 -->
                     <div class="portfolio__content grid swiper-slide">
                         <img src="assets/img/projects/codeio.png" alt="code.io" class="portfolio__img">
 
@@ -923,9 +884,6 @@
                     <input type="hidden" name="redirectTo" value="https://edssaac.github.io/Portfolio/">
 
                     <div>
-                        <!-- <a href="#" class="button button--flex">
-                                Enviar <i class="uil uil-message button__icon"></i>
-                            </a> -->
                         <input type="submit" value="Enviar" class="button button--flex button__submit" />
                     </div>
                 </form>
@@ -970,7 +928,7 @@
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; Edssac, 2021. Todos os direitos reservados.</p>
+            <p class="footer__copy">&#169; Edssac, 2024. Todos os direitos reservados.</p>
         </div>
     </footer>
 
