feat: adiciona uma nova qualificação

--- a/index.html
+++ b/index.html
@@ -332,6 +332,24 @@
 
                             <div>
                                 <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div>
+
+                        <!-- QUALIFICATION 4 -->
+                        <div class="qualification__data">
+                            <div></div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                            </div>
+
+                            <div>
+                                <h3 class="qualification__title">Gestão de Projetos</h3>
+                                <span class="qualification__subtitle">Etec - Sorocaba</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    2025
+                                </div>
                             </div>
                         </div>
                     </div>
